--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "classnames": "^2.3.2",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.12.17",
+    "heroicons": "^2.0.18",
     "lottie-react": "^2.4.0",
     "next": "12.1.6",
     "react": "18.2.0",
