--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.17",
     "heroicons": "^2.0.18",
@@ -17,12 +18,11 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-drag-drop-files": "2.3.10",
     "react-sortable-tree": "^2.3.0",
     "react-sortable-tree-theme-file-explorer": "^1.1.2",
     "react-sortablejs": "^6.0.0",
-    "sortablejs": "^1.12.0",
-    "react-drag-drop-files": "2.3.10"
-
+    "sortablejs": "^1.12.0"
   },
   "devDependencies": {
     "@types/sortablejs": "^1.15.1",
