--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-sortable-tree": "^2.3.0",
     "react-sortable-tree-theme-file-explorer": "^1.1.2",
     "react-sortablejs": "^6.0.0",
+    "react-toastify": "^9.1.3",
     "sortablejs": "^1.12.0"
   },
   "devDependencies": {
