--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,11 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/components/*": ["components/*"],
-        "@/utils/*":["utils/*"],
-        "@proj-components":["pro-components"]
-      }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/utils/*": ["utils/*"],
+      "@proj-components": ["pro-components"],
+      "@helpers/*": ["helpers"]
     }
   }
+}
