--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^7.3.5",
     "heroicons": "^2.0.18",
     "lottie-react": "^2.4.0",
+    "luxon": "^3.4.3",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
