--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "2.3.10",
+    "react-select": "^5.7.7",
     "react-sortable-tree": "^2.3.0",
     "react-sortable-tree-theme-file-explorer": "^1.1.2",
     "react-sortablejs": "^6.0.0",
