--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^2.0.12",
+    "@mui/material": "^5.14.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "framer-motion": "^7.3.5",
@@ -25,7 +28,8 @@
     "react-sortable-tree-theme-file-explorer": "^1.1.2",
     "react-sortablejs": "^6.0.0",
     "react-toastify": "^9.1.3",
-    "sortablejs": "^1.12.0"
+    "sortablejs": "^1.12.0",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/sortablejs": "^1.15.1",
