--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^2.0.12",
     "@mui/material": "^5.14.14",
@@ -21,12 +24,15 @@
     "luxon": "^3.4.3",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-accordion": "^0.3.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "2.3.10",
     "react-select": "^5.7.7",
     "react-sortable-tree": "^2.3.0",
     "react-sortable-tree-theme-file-explorer": "^1.1.2",
     "react-sortablejs": "^6.0.0",
+    "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.3",
     "sortablejs": "^1.12.0",
     "styled-components": "^6.1.0"
