--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "2.3.10",
+    "react-phone-input-2": "^2.15.1",
     "react-select": "^5.7.7",
     "react-sortable-tree": "^2.3.0",
     "react-sortable-tree-theme-file-explorer": "^1.1.2",
